style.css
@font-face {
    font-family:Roboto ;
    src: url("Font/Roboto/Roboto-Italic-VariableFont_wdth\,wght.ttf") format("truetype");
}

body{
font-family: Roboto;

}

p{
color: rgb(0, 0, 0);    
}

li{
color: rgb(224, 219, 219); 
font-size: 25px;
display: flex;
align-items: center;
gap: 15px;
text-shadow: 0px 0px 3px rgb(3, 3, 21);
}
.container{
display: grid;    
grid-template: 1fr 2fr 4fr / 1fr 3fr 1fr;
}

.sidebar ul{
list-style: none;    
margin: 0;
padding: 0;
display: flex;
flex-direction: column;
gap: 15px;
padding-left: 15px;
}

.sidebar{        
background-color: rgb(50, 50, 195);      
display: flex;
flex-direction: column;
gap: 40px;
grid-column: 1/2;
grid-row: 1/4;
}

.sidebar img{
height: 30px;
width: 30px;    
}

.dashboard img{
height: 50px;
width: 50px;    
}

.dashboard{
font-size: 32px;    
}

.header{
grid-column: 2/4;
grid-row: 1/2;
}

.content-header{
display: grid;    
grid-template: 1fr/2fr 1fr;
align-items: center;
background-color: rgb(18, 135, 150);
}

.column1{    
grid-row: 1;
grid-column: 1/2;    
}
.column2{
text-align: center;        
grid-column: 2/3;    
height: 150px;
}

input{       
width: 95%;    
border-radius: 15px;
border: solid rgb(31, 28, 28);
margin-left: 15px;
margin-bottom: 10px;
}

.lupa{
filter: invert(1);
height: 25px;
align-self: start;
}

.conjunto{
display: flex;
margin-top: 10px;
margin-left: 10px;
align-items: end;
}

.greeting{
display: grid;
grid-template: 1fr 1fr/ auto 3fr;
gap: 10px;
}
.text_greeting{
grid-area: 1/2/3/3;
}

.photo{
grid-area: 1/1/3/2;    
height: 100px;
width: 100px;
margin: 0 0 15px 15px
}
.photo2{
height: 50px;
width: 50px;    
}

.conjunto2{
display: flex;    
justify-content: center;
align-items: start;
margin-right: 15px;
gap: 15px;
}

.bell{
margin-top: 18px;    
}
.name-user{
font-size: 20px;
}

button{
width: 70px;
height: 30px;
border-radius: 11px;
background-color: yellow;
}

.team-button{
display: flex;    
justify-content: space-evenly;
align-items: end;
height: 60px;
}
.area-of-squares{
grid-row: 2/4;
grid-column: 2/3;    
display: grid;
grid-template: 50px repeat(3,200px)/ repeat(2,1fr);
gap: 30px;
}

.my-projects{
grid-column: 1/3;   
}
.square{
display: flex;
flex-direction: column;    
height: 200px;
background-color: red;
border-radius: 10px;
}


.announcements{
grid-row: 2/3;
grid-column: 3/4;    
}

.trending{
 grid-row: 3/4;
 grid-column: 3/4;   
}

